--- a/_includes/manuals/3.8/1.2_release_notes.md
+++ b/_includes/manuals/3.8/1.2_release_notes.md
@@ -13,10 +13,20 @@ The parameters still exist and can be specified, but the average user shouldn't 
 
 ### Upgrade warnings
 
-### Foreman Redis caching DB changed to 4
+#### Foreman Redis caching DB changed to 4
 
 Since Foreman 3.6 Foreman can be easily configured to use Redis for caching (using `--foreman-rails-cache-store type:redis`).
 Starting Foreman 3.8 this uses DB 4, instead of DB 0, to avoid potential conflicts with other software.
+
+#### `ct_command` and `fcct_command` settings replaced with `(fc)ct_location` and `(fc)ct_arguments`
+
+To fix [CVE-2022-3874](/security.html#2022-3874) the settings for the CoreOS and Fedora CoreOS
+transpiler commands were changed to individual settings for the location of the binary and the
+arguments passed to it.
+During the upgrade the location of the binaries will be automatically changed to `/usr/bin/ct`
+and `/usr/bin/fcct`. Setting the binary location to any other path requires changes to
+`settings.yaml`, as different locations are forbidden by default.
+The arguments are automatically migrated from the old settings to the new ones.
 
 ### Release Notes
 
